src/qt/libqgraphicseffect.bf

extension CQt
{
	[LinkName("QGraphicsBlurEffect_new")]
	public static extern void* QGraphicsBlurEffect_new();
	[LinkName("QGraphicsBlurEffect_new2")]
	public static extern void* QGraphicsBlurEffect_new2(void* parent);
	[LinkName("QGraphicsBlurEffect_MetaObject")]
	public static extern void* QGraphicsBlurEffect_MetaObject(void* c_this);
	[LinkName("QGraphicsBlurEffect_Metacast")]
	public static extern void* QGraphicsBlurEffect_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsBlurEffect_Metacall")]
	public static extern int32 QGraphicsBlurEffect_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QGraphicsBlurEffect_Tr")]
	public static extern libqt_string QGraphicsBlurEffect_Tr(char8[] s);
	[LinkName("QGraphicsBlurEffect_BoundingRectFor")]
	public static extern void QGraphicsBlurEffect_BoundingRectFor(void* c_this, void* rect);
	[LinkName("QGraphicsBlurEffect_BlurRadius")]
	public static extern double QGraphicsBlurEffect_BlurRadius(void* c_this);
	[LinkName("QGraphicsBlurEffect_BlurHints")]
	public static extern int64 QGraphicsBlurEffect_BlurHints(void* c_this);
	[LinkName("QGraphicsBlurEffect_SetBlurRadius")]
	public static extern void QGraphicsBlurEffect_SetBlurRadius(void* c_this, double blurRadius);
	[LinkName("QGraphicsBlurEffect_SetBlurHints")]
	public static extern void QGraphicsBlurEffect_SetBlurHints(void* c_this, int64 hints);
	[LinkName("QGraphicsBlurEffect_Connect_BlurRadiusChanged")]
	public static extern void QGraphicsBlurEffect_Connect_BlurRadiusChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsBlurEffect_Connect_BlurHintsChanged")]
	public static extern void QGraphicsBlurEffect_Connect_BlurHintsChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsBlurEffect_Draw")]
	public static extern void QGraphicsBlurEffect_Draw(void* c_this, void* painter);
	[LinkName("QGraphicsBlurEffect_Tr2")]
	public static extern libqt_string QGraphicsBlurEffect_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsBlurEffect_Tr3")]
	public static extern libqt_string QGraphicsBlurEffect_Tr3(char8[] s, char8[] c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsBlurEffect_Delete")]
	public static extern void QGraphicsBlurEffect_Delete(void* self);
}
public class QGraphicsDropShadowEffect
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsDropShadowEffect_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsDropShadowEffect_Delete(this.nativePtr);
	}
	
	public virtual void* MetaObject()
	{
		return CQt.QGraphicsDropShadowEffect_MetaObject(this.nativePtr);
	}
	
	public virtual void* Metacast(char8[] param1)
	{
		return CQt.QGraphicsDropShadowEffect_Metacast(this.nativePtr, param1);
	}
	
	public virtual int32 Metacall(int64 param1, int32 param2, void** param3)
	{
		return CQt.QGraphicsDropShadowEffect_Metacall(this.nativePtr, param1, param2, param3);
	}
	
	public static libqt_string Tr(char8[] s)
	{
		return CQt.QGraphicsDropShadowEffect_Tr(s);
	}
	
	public virtual void BoundingRectFor(void* rect)
	{
		CQt.QGraphicsDropShadowEffect_BoundingRectFor(this.nativePtr, rect);
	}
	
	public void Offset()
	{
		CQt.QGraphicsDropShadowEffect_Offset(this.nativePtr);
	}
	
	public double XOffset()
	{
		return CQt.QGraphicsDropShadowEffect_XOffset(this.nativePtr);
	}
	
	public double YOffset()
	{
		return CQt.QGraphicsDropShadowEffect_YOffset(this.nativePtr);
	}
	
	public double BlurRadius()
	{
		return CQt.QGraphicsDropShadowEffect_BlurRadius(this.nativePtr);
	}
	
	public void Color()
	{
		CQt.QGraphicsDropShadowEffect_Color(this.nativePtr);
	}
	
	public void SetOffset(void* ofs)
	{
		CQt.QGraphicsDropShadowEffect_SetOffset(this.nativePtr, ofs);
	}
	
	public void SetOffset2(double dx, double dy)
	{
		CQt.QGraphicsDropShadowEffect_SetOffset2(this.nativePtr, dx, dy);
	}
	
	public void SetOffsetWithQreal(double d)
	{
		CQt.QGraphicsDropShadowEffect_SetOffsetWithQreal(this.nativePtr, d);
	}
	
	public void SetXOffset(double dx)
	{
		CQt.QGraphicsDropShadowEffect_SetXOffset(this.nativePtr, dx);
	}
	
	public void SetYOffset(double dy)
	{
		CQt.QGraphicsDropShadowEffect_SetYOffset(this.nativePtr, dy);
	}
	
	public void SetBlurRadius(double blurRadius)
	{
		CQt.QGraphicsDropShadowEffect_SetBlurRadius(this.nativePtr, blurRadius);
	}
	
	public void SetColor(void* color)
	{
		CQt.QGraphicsDropShadowEffect_SetColor(this.nativePtr, color);
	}
	
	public virtual void Draw(void* painter)
	{
		CQt.QGraphicsDropShadowEffect_Draw(this.nativePtr, painter);
	}
	
	public static libqt_string Tr2(char8[] s, char8[] c)
	{
		return CQt.QGraphicsDropShadowEffect_Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8[] s, char8[] c, int32 n)
	{
		return CQt.QGraphicsDropShadowEffect_Tr3(s, c, n);
	}
	
	public void BoundingRect()
	{
		CQt.QGraphicsEffect_BoundingRect(this.nativePtr);
	}
	
	public bool IsEnabled()
	{
		return CQt.QGraphicsEffect_IsEnabled(this.nativePtr);
	}
	
	public void SetEnabled(bool enable)
	{
		CQt.QGraphicsEffect_SetEnabled(this.nativePtr, enable);
	}
	
	public void Update()
	{
		CQt.QGraphicsEffect_Update(this.nativePtr);
	}
	
	public virtual bool Event(void* event)
	{
		return CQt.QObject_Event(this.nativePtr, event);
	}
	
	public virtual bool EventFilter(void* watched, void* event)
	{
		return CQt.QObject_EventFilter(this.nativePtr, watched, event);
	}
	
	public libqt_string ObjectName()
	{
		return CQt.QObject_ObjectName(this.nativePtr);
	}
	
	public void SetObjectName(void name)
	{
		CQt.QObject_SetObjectName(this.nativePtr, name);
	}
	
	public bool IsWidgetType()
	{
		return CQt.QObject_IsWidgetType(this.nativePtr);
	}
	
	public bool IsWindowType()
	{
		return CQt.QObject_IsWindowType(this.nativePtr);
	}
	
	public bool IsQuickItemType()
	{
		return CQt.QObject_IsQuickItemType(this.nativePtr);
	}
	
	public bool SignalsBlocked()
	{
		return CQt.QObject_SignalsBlocked(this.nativePtr);
	}
	
	public bool BlockSignals(bool b)
	{
		return CQt.QObject_BlockSignals(this.nativePtr, b);
	}
	
	public void* Thread()
	{
		return CQt.QObject_Thread(this.nativePtr);
	}
	
	public void MoveToThread(void* thread)
	{
		CQt.QObject_MoveToThread(this.nativePtr, thread);
	}
	
	public int32 StartTimer(int32 interval)
	{
		return CQt.QObject_StartTimer(this.nativePtr, interval);
	}
	
	public void KillTimer(int32 id)
	{
		CQt.QObject_KillTimer(this.nativePtr, id);
	}
	
	public void*[] Children()
	{
		return CQt.QObject_Children(this.nativePtr);
	}
	
	public void SetParent(void* parent)
	{
		CQt.QObject_SetParent(this.nativePtr, parent);
	}
	
	public void InstallEventFilter(void* filterObj)
	{
		CQt.QObject_InstallEventFilter(this.nativePtr, filterObj);
	}
	
	public void RemoveEventFilter(void* obj)
	{
		CQt.QObject_RemoveEventFilter(this.nativePtr, obj);
	}
	
	public static QMetaObject__Connection Connect(void* sender, void* signal, void* receiver, void* method)
	{
		return CQt.QObject_Connect(sender, signal, receiver, method);
	}
	
	public QMetaObject__Connection Connect2(void* sender, char8[] signal, char8[] member)
	{
		return CQt.QObject_Connect2(this.nativePtr, sender, signal, member);
	}
	
	public static bool Disconnect(void* sender, void* signal, void* receiver, void* member)
	{
		return CQt.QObject_Disconnect(sender, signal, receiver, member);
	}
	
	public static bool DisconnectWithQMetaObjectConnection(QMetaObject__Connection* param1)
	{
		return CQt.QObject_DisconnectWithQMetaObjectConnection(param1);
	}
	
	public void DumpObjectTree()
	{
		CQt.QObject_DumpObjectTree(this.nativePtr);
	}
	
	public void DumpObjectInfo()
	{
		CQt.QObject_DumpObjectInfo(this.nativePtr);
	}
	
	public bool SetProperty(char8[] name, void* value)
	{
		return CQt.QObject_SetProperty(this.nativePtr, name, value);
	}
	
	public void Property(char8[] name)
	{
		CQt.QObject_Property(this.nativePtr, name);
	}
	
	public libqt_string[] DynamicPropertyNames()
	{
		return CQt.QObject_DynamicPropertyNames(this.nativePtr);
	}
	
	public void* BindingStorage()
	{
		return CQt.QObject_BindingStorage(this.nativePtr);
	}
	
	public void* BindingStorage2()
	{
		return CQt.QObject_BindingStorage2(this.nativePtr);
	}
	
	public void* Parent()
	{
		return CQt.QObject_Parent(this.nativePtr);
	}
	
	public bool Inherits(char8[] classname)
	{
		return CQt.QObject_Inherits(this.nativePtr, classname);
	}
	
	public void DeleteLater()
	{
		CQt.QObject_DeleteLater(this.nativePtr);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return CQt.QObject_StartTimer2(this.nativePtr, interval, timerType);
	}
	
	public static QMetaObject__Connection Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal)
	{
		return CQt.QObject_Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public QMetaObject__Connection Connect4(void* sender, char8[] signal, char8[] member, int64 typeVal)
	{
		return CQt.QObject_Connect4(this.nativePtr, sender, signal, member, typeVal);
	}
	
}
